# aef-mosaic

./: .gitignore  Cargo.toml  README.md  config.yaml  pyproject.toml
notebooks/: aef_zarr_qa.ipynb
src/: checkpoint.rs  config.rs  crs.rs  lib.rs  main.rs
src/index/: input_index.rs  mod.rs  output_grid.rs  spatial_lookup.rs
src/io/: cog_reader.rs  mod.rs  store.rs  tile_cache.rs  zarr_writer.rs  zarr_writer_integration_tests.rs
src/pipeline/: chunk_processor.rs  metrics.rs  mod.rs  scheduler.rs  stages.rs
src/transform/: mod.rs  mosaic.rs  reproject.rs
